syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Events;
import "google/protobuf/timestamp.proto";

enum EventTicketStatus {
	TICKET_STATUS_AVAILABLE = 0;
	TICKET_STATUS_USED = 1;
	TICKET_STATUS_EXPIRED = 2;
	TICKET_STATUS_CANCELED = 3;
}

message EventTicketPublicRecord {
	string TicketClassId = 1;
	string Title = 2;
	string EventId = 3;
	EventTicketStatus Status = 4;
	google.protobuf.Timestamp CreatedOnUTC = 21;
	google.protobuf.Timestamp ModifiedOnUTC = 22;
	google.protobuf.Timestamp UsedOnUTC = 23;
	google.protobuf.Timestamp ExpiredOnUTC = 24;
	google.protobuf.Timestamp CanceledOnUTC = 25;
}

message EventTicketPrivateRecord {
	string UserId = 1;
	string CreatedById = 2;
	string ModifiedById = 3;
	string UsedById = 4;
	string CanceledById = 5;
	string CanceledForReason = 6;
}

message EventTicketRecord {
	string TicketId = 1;
	EventTicketPublicRecord Public = 2;
	EventTicketPrivateRecord Private = 3;
}